--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -2,6 +2,10 @@ body {
     background-color: lightblue;
 }
 
+a , a:hover {
+    color:  blue;
+}
+
 #mybar {
     border-radius: 0px;
     background-color: black;
@@ -61,6 +65,10 @@ body {
     padding-right: 50px;    
 }
 #content section {
+    margin: 10px;
+    margin-bottom: 30px;
+    padding: 5px;
+	border: 1px solid black;
     background-color: grey;
 }
 #content h2{
@@ -73,3 +81,15 @@ body {
     padding-right: 20px;
     padding-bottom: 10px;
 }
+
+#content .section-chicken {
+	background-color: LightGray;
+}
+
+#content .section-beef {
+	background-color: Orange;
+}
+#content .section-sushi {
+	background-color: MediumSeaGreen;
+}
+
